playbin2: use private copy of input-selector
We shouldn't really depend on elements from -bad for stream
selection in playbin2, so use a private copy of input-selector
until the selector plugin is ready to be moved to -base or -good.
Fixes #586356.

--- a/gst-plugins-base/gst/playback/Makefile.am
+++ b/gst-plugins-base/gst/playback/Makefile.am
@@ -17,6 +17,7 @@ libgstplaybin_la_SOURCES = \
 	gstplaybasebin.c \
 	gstplay-enum.c \
 	gstfactorylists.c \
+	gstinputselector.c \
 	gstscreenshot.c \
 	gststreaminfo.c \
 	gststreamselector.c
@@ -59,6 +60,7 @@ noinst_HEADERS = \
 	gstplaysink.h \
 	gststreaminfo.h \
 	gstfactorylists.h \
+	gstinputselector.h \
 	gstplay-enum.h \
 	gstscreenshot.h \
 	gststreamselector.h
