cairo: Add cairo-based PDF/PS/SVG encoder element
Fixes bug #331420.

--- a/gst-plugins-good/ext/cairo/Makefile.am
+++ b/gst-plugins-good/ext/cairo/Makefile.am
@@ -1,11 +1,12 @@
 plugin_LTLIBRARIES = libgstcairo.la
 
-noinst_HEADERS = gsttimeoverlay.h gsttextoverlay.h
+noinst_HEADERS = gsttimeoverlay.h gsttextoverlay.h gstcairorender.h
 
 libgstcairo_la_SOURCES = \
 	gstcairo.c \
 	gsttimeoverlay.c \
-	gsttextoverlay.c
+	gsttextoverlay.c \
+	gstcairorender.c
 
 libgstcairo_la_CFLAGS = \
         $(GST_PLUGINS_BASE_CFLAGS) \
