checks: add kate unit tests to valgrind blacklist for now
And add check binary to ignore list.

--- a/gst-plugins-bad/tests/check/elements/.gitignore
+++ b/gst-plugins-bad/tests/check/elements/.gitignore
@@ -6,6 +6,7 @@ deinterleave
 gdpdepay
 gdppay
 interleave
+kate
 legacyresample
 mpeg2enc
 mplex
@@ -19,6 +20,7 @@ rganalysis
 rglimiter
 rgvolume
 rtpbin
+rtpbin_buffer_list
 selector
 shapewipe
 spectrum
