start refactoring of dshowsrcwrapper
-remove gst-libs/gst/dshow
-fakesource is moved from gst-libs/gst/dshow to sys/dshowsrcwrapper
-some minor changes (C/C++ check and includes) to make the plugin
compile again.

--- a/gst-plugins-bad/gst-libs/gst/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/Makefile.am
@@ -2,4 +2,4 @@
 SUBDIRS = interfaces signalprocessor video
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = dshow interfaces signalprocessor video
+DIST_SUBDIRS = interfaces signalprocessor video
