--- a/gst-plugins-bad/docs/plugins/Makefile.am
+++ b/gst-plugins-bad/docs/plugins/Makefile.am
@@ -140,6 +140,7 @@ EXTRA_HFILES = \
 	$(top_srcdir)/gst/mxf/mxfdemux.h \
 	$(top_srcdir)/gst/mxf/mxfmux.h \
 	$(top_srcdir)/gst/nuvdemux/gstnuvdemux.h \
+	$(top_srcdir)/gst/pcapparse/gstpcapparse.h \
 	$(top_srcdir)/gst/rawparse/gstaudioparse.h \
 	$(top_srcdir)/gst/rawparse/gstvideoparse.h \
 	$(top_srcdir)/gst/rtpmanager/gstrtpbin.h \
