dshowvideosrc: converts code to C++

--- a/gst-plugins-bad/win32/vs8/libdshowsrcwrapper.vcproj
+++ b/gst-plugins-bad/win32/vs8/libdshowsrcwrapper.vcproj
@@ -236,7 +236,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\sys\dshowsrcwrapper\gstdshowvideosrc.c"
+				RelativePath="..\..\sys\dshowsrcwrapper\gstdshowvideosrc.cpp"
 				>
 			</File>
 			<File
