dshowaudiosrc: converts code to C++

--- a/gst-plugins-bad/win32/vs8/libdshowsrcwrapper.vcproj
+++ b/gst-plugins-bad/win32/vs8/libdshowsrcwrapper.vcproj
@@ -224,7 +224,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\sys\dshowsrcwrapper\gstdshowaudiosrc.c"
+				RelativePath="..\..\sys\dshowsrcwrapper\gstdshowaudiosrc.cpp"
 				>
 			</File>
 			<File
