queue: add unit test
Make a downstream element return an error after upstream has already
put all data into queue (including EOS).  As such, upstream
will not be around to pick up the error, so it is up to queue to
act appropriately.  See #589991.

Note there may be downstream fatal errors (e.g. negotiation) that do
not warrant an error message already having been posted.

--- a/gstreamer/tests/check/Makefile.am
+++ b/gstreamer/tests/check/Makefile.am
@@ -70,7 +70,8 @@ REGISTRY_CHECKS =				\
 	libs/basesrc				\
 	libs/controller				\
 	libs/typefindhelper			\
-	pipelines/stress
+	pipelines/stress			\
+	pipelines/queue-error
 endif
 
 check_PROGRAMS =				\
