asfmux: First basic check unit tests
Adds simple asfmux unit tests, that test pad creation and pushing a
single buffer through them

--- a/gst-plugins-bad/tests/check/Makefile.am
+++ b/gst-plugins-bad/tests/check/Makefile.am
@@ -88,6 +88,7 @@ check_PROGRAMS = \
 	$(check_kate)  \
 	elements/aacparse \
 	elements/amrparse \
+	elements/asfmux \
 	elements/camerabin \
 	elements/legacyresample \
 	elements/qtmux \
