--- a/gst-plugins-good/tests/files/Makefile.am
+++ b/gst-plugins-good/tests/files/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	id3-407349-2.tag \
 	id3-447000-wcop.tag \
 	id3-577468-unsynced-tag.tag \
+	pcm16sine.flv \
 	test-cert.pem \
 	test-key.pem
 
