--- a/gstreamer/pkgconfig/gstreamer-check-uninstalled.pc.in
+++ b/gstreamer/pkgconfig/gstreamer-check-uninstalled.pc.in
@@ -9,5 +9,5 @@ Description: Unit testing helper library for GStreamer modules, Not Installed
 Requires: gstreamer-@GST_MAJORMINOR@ = @VERSION@
 Version: @VERSION@
 
-Libs: ${libdir}/libgstcheck-@GST_MAJORMINOR@.la @CHECK_LIBS@ -lm
-Cflags: -I${includedir} -I@srcdir@/.. @CHECK_CFLAGS@
+Libs: ${libdir}/libgstcheck-@GST_MAJORMINOR@.la -lm
+Cflags: -I${includedir} -I@srcdir@/..
