check: add internal-check.h to BUILT_SOURCES in attempt to fix the build
For some people the build of libgstcheck was broken because the make
target that creates the internal-check.h file wasn't executed for
some reason. This should hopefully fix this.

--- a/gstreamer/libs/gst/check/Makefile.am
+++ b/gstreamer/libs/gst/check/Makefile.am
@@ -2,6 +2,8 @@ lib_LTLIBRARIES = libgstcheck-@GST_MAJORMINOR@.la
 
 SYMBOLS_FILE = exports.sym
 
+BUILT_SOURCES = internal-check.h
+
 libgstcheck_@GST_MAJORMINOR@_la_DEPENDENCIES = \
 	$(top_builddir)/gst/libgstreamer-@GST_MAJORMINOR@.la \
 	internal-check.h \
