spc: Rename SPC plugin to GME
as preparation for enabling support for non-SPC gaming console sound files.

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -1369,22 +1369,22 @@ AG_GST_CHECK_FEATURE(SOUNDTOUCH, [soundtouch plug-in], soundtouch, [
   fi
 ])
 
-dnl *** spc ***
-translit(dnm, m, l) AM_CONDITIONAL(USE_SPC, true)
-AG_GST_CHECK_FEATURE(SPC, [spc decoder], spc, [
+dnl *** gme ***
+translit(dnm, m, l) AM_CONDITIONAL(USE_GME, true)
+AG_GST_CHECK_FEATURE(GME, [gme decoder], gme, [
   AC_CHECK_HEADER(gme/gme.h, [
     AC_CHECK_LIB(gme, gme_new_emu, [
-      SPC_LIBS="-lgme"
-      AC_SUBST(SPC_LIBS)
-      HAVE_SPC=yes
+      GME_LIBS="-lgme"
+      AC_SUBST(GME_LIBS)
+      HAVE_GME=yes
     ], [
-      HAVE_SPC=no
+      HAVE_GME=no
     ])
   ], [
-    HAVE_SPC=no
+    HAVE_GME=no
   ])
 
-  if test "x$HAVE_SPC" = "xyes"; then
+  if test "x$HAVE_GME" = "xyes"; then
     AC_CHECK_LIB(gme, gme_enable_accuracy, [
       AC_DEFINE(HAVE_LIBGME_ACCURACY, 1, [Define if gme 0.5.6 or newer is available])
       ])
@@ -1566,7 +1566,7 @@ AM_CONDITIONAL(USE_OSS4, false)
 AM_CONDITIONAL(USE_SDL, false)
 AM_CONDITIONAL(USE_SNDFILE, false)
 AM_CONDITIONAL(USE_SOUNDTOUCH, false)
-AM_CONDITIONAL(USE_SPC, false)
+AM_CONDITIONAL(USE_GME, false)
 AM_CONDITIONAL(USE_SWFDEC, false)
 AM_CONDITIONAL(USE_THEORADEC, false)
 AM_CONDITIONAL(USE_TIMIDITY, false)
@@ -1767,7 +1767,7 @@ ext/schroedinger/Makefile
 ext/sdl/Makefile
 ext/sndfile/Makefile
 ext/soundtouch/Makefile
-ext/spc/Makefile
+ext/gme/Makefile
 ext/swfdec/Makefile
 ext/theora/Makefile
 ext/timidity/Makefile
