--- a/gst-plugins-bad/ext/gme/Makefile.am
+++ b/gst-plugins-bad/ext/gme/Makefile.am
@@ -2,8 +2,8 @@ plugin_LTLIBRARIES = libgstgme.la
 
 libgstgme_la_SOURCES = gstgme.c
 
-libgstgme_la_CFLAGS = $(GST_CFLAGS) $(GME_CFLAGS)
-libgstgme_la_LIBADD = $(GST_LIBS) $(GME_LIBS)
+libgstgme_la_CFLAGS = $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(GME_CFLAGS)
+libgstgme_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS) $(GME_LIBS)
 libgstgme_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstgme_la_LIBTOOLFLAGS = --tag=disable-static
 
