id3demux: fix parsing of unsync'ed ID3 v2.4 tags and frames
Reversing the unsynchronisation seems to work slightly differently
for ID3 v2.3 tags and v2.4 tags: v2.3 tags don't have syncsafe frame
sizes in the frame header, so the unsynchronisation is applied to
the whole frame data including all the frame headers. v2.4 frames
have sync-safe sizes, however, so the unsynchronisation only needs
to be applied to the actual frame data, and it seems that's what's
being done as well. So we need to undo the unsynchronisation on a
per-frame basis for v2.4 tags for things to work properly.

Fixes extraction of coverart/images from APIC frames in ID3 v2.4
tags (#588148).

Add unit test for this as well.

--- a/gst-plugins-good/tests/files/Makefile.am
+++ b/gst-plugins-good/tests/files/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	id3-407349-2.tag \
 	id3-447000-wcop.tag \
 	id3-577468-unsynced-tag.tag \
+	id3-588148-unsynced-v24.tag \
 	pcm16sine.flv \
 	test-cert.pem \
 	test-key.pem
