rtsp: Use GLib's GChecksum instead of our own MD5 implementation

--- a/gst-plugins-base/gst-libs/gst/rtsp/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/rtsp/Makefile.am
@@ -24,13 +24,12 @@ libgstrtsp_@GST_MAJORMINOR@_la_SOURCES = gstrtspbase64.c \
 					 gstrtspmessage.c    \
 					 gstrtsprange.c      \
 					 gstrtsptransport.c  \
-					 gstrtspurl.c        \
-					 md5.c
+					 gstrtspurl.c
 
 nodist_libgstrtsp_@GST_MAJORMINOR@_la_SOURCES = $(built_sources)
 nodist_libgstrtspinclude_HEADERS = gstrtsp-enumtypes.h
 
-noinst_HEADERS = gstrtsp.h md5.h
+noinst_HEADERS = gstrtsp.h
 
 #gstrtspextwms.c  
 #rtspextreal.c    
